--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-total 5.4M
+total 6.9M
 -rw-r--r-- 1 qwe qwe 3.2M Dec 15 08:27 0-01-20221215082604.mkv
 -rw-r--r-- 1 qwe qwe 2.2M Dec 15 08:28 0-01-20221215082704.mkv
--rw-r--r-- 1 qwe qwe    0 Dec 15 08:35 0-02-20221215083554.mkv
+-rw-r--r-- 1 qwe qwe  75K Dec 15 08:36 0-02-20221215083554.mkv
+-rw-r--r-- 1 qwe qwe 1.5M Dec 15 10:05 0-03-20221215100533.mkv
