--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-total 8.4M
+total 12M
 -rw-r--r-- 1 qwe qwe 3.8M Dec 16 10:35 0-01-20221216103442.mkv
 -rw-r--r-- 1 qwe qwe 4.4M Dec 16 10:36 0-01-20221216103542.mkv
--rw-r--r-- 1 qwe qwe 256K Dec 16 10:36 0-01-20221216103642.mkv
+-rw-r--r-- 1 qwe qwe 1.9M Dec 16 10:38 0-01-20221216103642.mkv
+-rw-r--r-- 1 qwe qwe 1.5M Dec 16 17:36 0-02-20221216173633.mkv
