--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 1.8M
--rw-r--r-- 1 qwe qwe 1.8M Dec 18 08:08 0-01-20221218080825.mkv
+total 4.0M
+-rw-r--r-- 1 qwe qwe 3.3M Dec 18 08:09 0-01-20221218080825.mkv
+-rw-r--r-- 1 qwe qwe 768K Dec 18 08:09 0-01-20221218080927.mkv
