--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Jan 26 09:24 0-01-20230126092423.mkv
+total 68K
+-rw-r--r-- 1 qwe qwe 68K Jan 26 09:25 0-01-20230126092423.mkv
+-rw-r--r-- 1 qwe qwe   0 Jan 26 09:41 0-02-20230126094139.mkv
