--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Jan 27 09:39 0-01-20230127093937.mkv
+total 1.1M
+-rw-r--r-- 1 qwe qwe  72K Jan 27 09:40 0-01-20230127093937.mkv
+-rw-r--r-- 1 qwe qwe 1.0M Jan 27 15:21 0-02-20230127152047.mkv
