--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 1.1M
+total 5.1M
 -rw-r--r-- 1 qwe qwe  72K Jan 27 09:40 0-01-20230127093937.mkv
--rw-r--r-- 1 qwe qwe 1.0M Jan 27 15:21 0-02-20230127152047.mkv
+-rw-r--r-- 1 qwe qwe 4.5M Jan 27 15:21 0-02-20230127152047.mkv
+-rw-r--r-- 1 qwe qwe 512K Jan 27 15:21 0-02-20230127152147.mkv
