--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 2.1M
+total 5.9M
 -rw-r--r-- 1 qwe qwe 2.1M Jan 29 22:02 0-01-20230129220101.mkv
--rw-r--r-- 1 qwe qwe    0 Jan 29 22:06 0-02-20230129220600.mkv
+-rw-r--r-- 1 qwe qwe 3.8M Jan 29 22:07 0-02-20230129220600.mkv
+-rw-r--r-- 1 qwe qwe    0 Jan 29 22:07 0-02-20230129220700.mkv
