--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-total 78M
+total 86M
 -rw-r--r-- 1 qwe qwe 4.5M Oct 15 09:29 0-01-20241015092804.mkv
 -rw-r--r-- 1 qwe qwe 389K Oct 15 09:30 0-01-20241015092904.mkv
 -rw-r--r-- 1 qwe qwe 3.8M Oct 15 09:33 0-02-20241015093253.mkv
@@ -20,4 +20,7 @@ total 78M
 -rw-r--r-- 1 qwe qwe 6.6M Oct 15 09:52 0-03-20241015095110.mkv
 -rw-r--r-- 1 qwe qwe 4.3M Oct 15 09:53 0-03-20241015095210.mkv
 -rw-r--r-- 1 qwe qwe 1.5M Oct 15 09:54 0-03-20241015095319.mkv
--rw-r--r-- 1 qwe qwe 768K Oct 15 09:55 0-03-20241015095419.mkv
+-rw-r--r-- 1 qwe qwe 1.4M Oct 15 09:55 0-03-20241015095419.mkv
+-rw-r--r-- 1 qwe qwe 995K Oct 15 09:56 0-03-20241015095526.mkv
+-rw-r--r-- 1 qwe qwe 4.1M Oct 15 09:57 0-03-20241015095635.mkv
+-rw-r--r-- 1 qwe qwe 2.8M Oct 15 09:59 0-03-20241015095737.mkv
